--- a/assets/Ebook/css/magazine.css
+++ b/assets/Ebook/css/magazine.css
@@ -1,7 +1,7 @@
 body {
 	font-family: 'Pretendard';
 	overflow: hidden;
-	background: url(../pics/ebook_bg.jpg) no-repeat center top;/* 배경 */
+	background: url(../pics/ebookbg.jpg) no-repeat center top;/* 배경 */
 	background-size: cover;
 	margin: 0;
 	padding: 0;
@@ -20,14 +20,14 @@ body {
 	border-radius: 10px;
 	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 	background: #fff;
-	border: 2px solid #44584c;
-	color: #44584c;
+	border: 2px solid  #6e85db;
+	color:  #4d5e9b;
 	font-weight: bold;
 	text-decoration: none;
 }
 
 .btn_1:hover{
-	background-color: #44584c;
+	background-color: #6e85db;
 	color: #fff;
 }
 
