--- a/assets/guide/guide.css
+++ b/assets/guide/guide.css
@@ -8,7 +8,7 @@ body{
 
 /* 배경색상 */
 .brand1{
-    background-color: #dbd4d0;
+    background: linear-gradient(to bottom, #e9f5fb,#d4eaf7, #c0e1f4);
 }
 
 /* 이미지 크기 */
@@ -39,12 +39,12 @@ img{
 	border-radius: 10px;
 	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 	background: #fff;
-	color: #6a5445;
-	border: 2px solid #6a5445;
+	color: #2288c3;
+	border: 2px solid #2288c3;
 	font-weight: bold;
 }
 
 .btn_1 li a:hover{
-	background-color: #6a5445;
+	background-color:  #93cbec;
 	color: #fff;
 }
