--- a/assets/Ebook/css/magazine.css
+++ b/assets/Ebook/css/magazine.css
@@ -1,10 +1,12 @@
 body {
 	font-family: 'Pretendard';
 	overflow: hidden;
-	background: url(../pics/ebookbg.jpg) no-repeat center top;/* 배경 */
+	background: url(../pics/ebookbg.jpg) no-repeat center top;
+	/* 배경 */
 	background-size: cover;
 	margin: 0;
 	padding: 0;
+	/* background-color: #666; */
 }
 
 /* 버튼 */
